Add jbang shebang to all proof files for self-runnable execution
Co-authored-by: brunoborges <129743+brunoborges@users.noreply.github.com>